# neuro-match-project

./: LICENSE  Makefile  README.md  label_videos (2).ipynb  pca_loaded_from_memory.ipynb  pyproject.toml
data/: video categories.csv
data/pca/: test_layer_1.npy  test_layer_2.npy  test_layer_3.npy  test_layer_4.npy  test_layer_5.npy  test_layer_6.npy  test_layer_7.npy  test_layer_8.npy  train_layer_1.npy  train_layer_2.npy  train_layer_3.npy  train_layer_4.npy  train_layer_5.npy  train_layer_6.npy  train_layer_7.npy  train_layer_8.npy
docs/: mkdocs.yml
docs/docs/: index.md
neuro-encoder/: __init__.py  dataset.py  features.py  plots.py
neuro-encoder/modeling/: predict.py  train.py
notebooks/: 380_fmri_loaded_from_memory.ipynb  380_pca_loaded_from_memory.ipynb  Categorizing_videos_and_clustering_groups_.ipynb  Clustering.ipynb  Clustering_380_videos.ipynb  Clustering_380_videos_without_RDM's.ipynb  Clustering_73_videos.ipynb  Cross_Entropy_Loss.ipynb  Improving_AlexNet_Performance.ipynb  PCA_CLUSTERING_WITH_DBSCAN.ipynb  Quantum_Clustering.ipynb  Regression_Analysis_(MSE,_MAE,_R2).ipynb  alex_net_layer_extration.ipynb  fmri_loaded_from_memory.ipynb  fmri_rdm_calculation.ipynb  load_algonauts_videos.ipynb  load_cichy_fMRI_MEG.ipynb  pca_loaded_from_memory.ipynb
